# tese_kinova

./: README.md
gazebo-pkgs/gazebo_grasp_plugin/src/: GazeboGraspFix.cpp
kinova-ros/: README.htmp
kinova-ros/experiment_1/: CMakeLists.txt  package.xml
kinova-ros/experiment_1/launch/: detect_tic_tac_toe_board.launch  detection_board.launch  detection_launch.launch  detection_pieces.launch  detection_traffic_lights.launch  processing_launch.launch  sim_launch.launch
kinova-ros/experiment_1/scripts/: fake_piece_position.py  filtering_and_segmentation.cpp  filtering_and_segmentation_traffic.cpp  init_group.py  kinect_detection.py  move_cartesian.py  pick_place_poses.py  pick_up_and_place.py  pickup_place_cartesian.py  position_srv.py  positions_objects_pub.py  set_game.py  set_game_gui.py  set_game_gui_tmp.py  tic_tac_toe_ai.py  tic_tac_toe_game_gui.py  traffic_lights_game_gui.py
kinova-ros/experiment_1/urdf/: j2n6s200_standalone.xacro
kinova-ros/experiment_1/worlds/: jaco_and_beer.world  jaco_and_box.world  jaco_and_box_kinect.world  jaco_cups.world  jaco_experimental.world  jaco_kinect.world  jaco_kinect_board.world  jaco_kinect_pieces.world  jaco_tic_tac_toe.world  jaco_tic_tac_toe_kinect.world  jaco_tic_tac_toe_kinect_short.world  jaco_traffic_lights_kinect_short.world
kinova-ros/experiment_1_msgs/: CMakeLists.txt  package.xml
kinova-ros/experiment_1_msgs/msg/: InfoBoard.msg  InfoPieces.msg  List2.msg  List_2.msg  move_commander.msg
kinova-ros/experiment_1_msgs/srv/: CartPath.srv  NamedTargetGripper.srv  PickPlace.srv  PosBoard.srv  PosPiece.srv
kinova-ros/kinova_bringup/launch/: kinova_robot.launch
kinova-ros/kinova_control/launch/: kinova_control.launch
kinova-ros/kinova_control/src/: move_robot.py
kinova-ros/kinova_description/launch/: display_kinova_robot.launch
kinova-ros/kinova_description/urdf/: grasp_plugin_fix.xacro  j2n6s300_original.xacro  j2n6s300_standalone.xacro  j2s6s300_standalone.xacro  kinova_common.xacro  kinova_finger_set.xacro
kinova-ros/kinova_gazebo/launch/: robot_launch.launch
kinova-ros/kinova_moveit/kinova_arm_moveit_demo/: CMakeLists.txt
(+21 files in other folders)
