<?xml version="1.0"?>
<package>
  <name>experiment_1</name>
  <version>0.0.0</version>
  <description>The experiment_1 package</description>
  <maintainer email="creoulo@todo.todo">creoulo</maintainer>



  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>kinova_control</run_depend>
  <run_depend>kinova_description</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
